update and renumber subsequent pipeline steps

--- a/pipeline/10-establish-panel.ipynb
+++ b/pipeline/10-establish-panel.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,12 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Substantive!\n",
+    "# There aren't enough data points within 400m or even 800m.\n",
+    "# In panel.ipynb we show that UC and MP have higher ridership than other\n",
+    "# places, and furthermore that the signal is stronger closer to UC and MP\n",
+    "# and reverts to the mean as the buffer size grows.\n",
+    "# Thus, using the largest buffer size attenuates and possibly confounds our\n",
+    "# signal with irrelevant rides, but is necessary to achieve a minimal sample\n",
+    "# of treated units.\n",
+    "\n",
     "def label_ucmp(df):\n",
-    "    df['UCMP'] = df['uc_1600'] + df['mp_1600']\n",
+    "    df['UCMP'] = np.where((df['uc_1600'] > 0) | (df['mp_1600'] > 0), 1,0)\n",
     "    return df.drop(columns=df.filter(regex='uc_|mp_').columns)\n",
     "\n",
     "point_panel = point_panel.pipe(label_ucmp)\n",
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,15 +185,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dropping 105440 (7%) point rows\n",
-      "Dropping 728 (2%) line rows\n",
+      "Dropping 100050 (15%) point rows\n",
+      "Dropping 484 (2%) line rows\n",
       "Dropping 0 (0%) tract rows\n"
      ]
     }
@@ -204,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "better model = weekly, R2 = 0.705, partial R2 = 0.186\n"
+      "better model = weekly, R2 = 0.709, partial R2 = 0.192\n"
      ]
     }
    ],
@@ -312,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -344,27 +353,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>3.889499</td>\n",
-       "      <td>5.05456</td>\n",
-       "      <td>1.29954</td>\n",
+       "      <td>3.886702</td>\n",
+       "      <td>5.028669</td>\n",
+       "      <td>1.293814</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1.194034</td>\n",
-       "      <td>1.379189</td>\n",
-       "      <td>1.155067</td>\n",
+       "      <td>1.193407</td>\n",
+       "      <td>1.379124</td>\n",
+       "      <td>1.155619</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mde</th>\n",
-       "      <td>0.008498</td>\n",
-       "      <td>0.023653</td>\n",
-       "      <td>2.783408</td>\n",
+       "      <td>0.008493</td>\n",
+       "      <td>0.023588</td>\n",
+       "      <td>2.777387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>effect_size</th>\n",
-       "      <td>1.275696</td>\n",
-       "      <td>2.771874</td>\n",
-       "      <td>2.172832</td>\n",
+       "      <td>1.275655</td>\n",
+       "      <td>2.766865</td>\n",
+       "      <td>2.168977</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>power_achieved</th>\n",
@@ -374,9 +383,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>t_stat</th>\n",
-       "      <td>420.58172</td>\n",
-       "      <td>328.321821</td>\n",
-       "      <td>0.780637</td>\n",
+       "      <td>420.800838</td>\n",
+       "      <td>328.620815</td>\n",
+       "      <td>0.780941</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>is_detectable</th>\n",
@@ -389,17 +398,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                    daily      weekly     ratio\n",
-       "mean             3.889499     5.05456   1.29954\n",
-       "std              1.194034    1.379189  1.155067\n",
-       "mde              0.008498    0.023653  2.783408\n",
-       "effect_size      1.275696    2.771874  2.172832\n",
-       "power_achieved        1.0         1.0       1.0\n",
-       "t_stat          420.58172  328.321821  0.780637\n",
-       "is_detectable        True        True       1.0"
+       "                     daily      weekly     ratio\n",
+       "mean              3.886702    5.028669  1.293814\n",
+       "std               1.193407    1.379124  1.155619\n",
+       "mde               0.008493    0.023588  2.777387\n",
+       "effect_size       1.275655    2.766865  2.168977\n",
+       "power_achieved         1.0         1.0       1.0\n",
+       "t_stat          420.800838  328.620815  0.780941\n",
+       "is_detectable         True        True       1.0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,14 +433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "better model = weekly, R2 = 0.706, partial R2 = 0.186\n"
+      "better model = weekly, R2 = 0.709, partial R2 = 0.192\n"
      ]
     }
    ],
@@ -447,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -483,18 +492,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.021313</td>\n",
-       "      <td>0.044247</td>\n",
+       "      <td>0.021317</td>\n",
+       "      <td>0.044112</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mde</th>\n",
        "      <td>0.000152</td>\n",
-       "      <td>0.000759</td>\n",
+       "      <td>0.000754</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>effect_size</th>\n",
-       "      <td>1.275696</td>\n",
-       "      <td>2.771874</td>\n",
+       "      <td>1.275655</td>\n",
+       "      <td>2.766865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>power_achieved</th>\n",
@@ -503,8 +512,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>t_stat</th>\n",
-       "      <td>23562.54745</td>\n",
-       "      <td>10233.856304</td>\n",
+       "      <td>23557.807539</td>\n",
+       "      <td>10274.036559</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>is_detectable</th>\n",
@@ -516,17 +525,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                      daily        weekly\n",
-       "mean                    0.0           0.0\n",
-       "std                0.021313      0.044247\n",
-       "mde                0.000152      0.000759\n",
-       "effect_size        1.275696      2.771874\n",
-       "power_achieved          1.0           1.0\n",
-       "t_stat          23562.54745  10233.856304\n",
-       "is_detectable          True          True"
+       "                       daily        weekly\n",
+       "mean                     0.0           0.0\n",
+       "std                 0.021317      0.044112\n",
+       "mde                 0.000152      0.000754\n",
+       "effect_size         1.275655      2.766865\n",
+       "power_achieved           1.0           1.0\n",
+       "t_stat          23557.807539  10274.036559\n",
+       "is_detectable           True          True"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
