--- a/pipeline/8-code-features.ipynb
+++ b/pipeline/8-code-features.ipynb
@@ -16,7 +16,6 @@
     "                                OHARE_CENTROID, MIDWAY_CENTROID,\n",
     "                                DNC_START, DNC_END, L_STATIONS_TABLE)\n",
     "from data.geo import meter_to_foot, dms_to_decimal\n",
-    "from data.datemath import to_ymd\n",
     "from data.cta import CTAClient"
    ]
   },
@@ -29,26 +28,26 @@
     "train_file_in = os.path.join(DATA_FOLDER, \"raw\", \"train_stations.geojson\")\n",
     "bus_routes_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_routes.geojson\")\n",
     "bus_stops_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_stops.geojson\")\n",
-    "bike_stations_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bike_stations.geojson\")\n",
+    "bike_stations_file_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_stations_gbfs.geoparquet\")\n",
     "tract_file_in = os.path.join(DATA_FOLDER, \"raw\", \"tracts.geojson\")\n",
     "comm_file_in = os.path.join(DATA_FOLDER, \"raw\", \"communities.geojson\")\n",
     "poi_file_in = os.path.join(DATA_FOLDER, \"raw\", \"poi_buildings.geojson\")\n",
     "\n",
     "train_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"train_rides.csv\")\n",
     "bus_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_rides.csv\")\n",
-    "bike_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"bike_rides.geoparquet\")\n",
+    "bike_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides_v2.geoparquet\")\n",
     "uber_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"uber_rides.parquet\")\n",
     "\n",
     "train_file_out = os.path.join(DATA_FOLDER, \"interim\", \"train_stations.geojson\")\n",
     "bus_routes_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bus_routes.geojson\")\n",
     "bus_stops_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bus_stops.geojson\")\n",
-    "bike_stations_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_stations.geojson\")\n",
+    "bike_stations_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_stations_gbfs_v2.geojson\")\n",
     "tract_file_out = os.path.join(DATA_FOLDER, \"interim\", \"tracts.geoparquet\")\n",
     "comm_file_out = os.path.join(DATA_FOLDER, \"interim\", \"communities.geojson\")\n",
     "\n",
     "train_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"train_rides.csv\")\n",
     "bus_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"bus_rides.csv\")\n",
-    "bike_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides.geoparquet\")\n",
+    "bike_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides_v3.geoparquet\")\n",
     "uber_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"uber_rides.parquet\")"
    ]
   },
@@ -71,7 +70,7 @@
     "tract_points = gpd.read_file(tract_file_in)\n",
     "comm_points = gpd.read_file(comm_file_in)\n",
     "poi_buildings = gpd.read_file(poi_file_in)\n",
-    "bike_stations = gpd.read_file(bike_stations_file_in)"
+    "bike_stations = gpd.read_parquet(bike_stations_file_in)"
    ]
   },
   {
@@ -127,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +431,7 @@
    "source": [
     "train_rides['DNC'] = (train_rides['date'] >= DNC_START) & (train_rides['date'] <= DNC_END)\n",
     "bus_rides['DNC'] = (bus_rides['date'] >= DNC_START) & (bus_rides['date'] <= DNC_END)\n",
-    "bike_rides['DNC'] = (bike_rides['date'].apply(to_ymd) >= DNC_START) & (bike_rides['date'].apply(to_ymd) <= DNC_END)\n",
+    "bike_rides['DNC'] = (bike_rides['date'] >= DNC_START) & (bike_rides['date'] <= DNC_END)\n",
     "uber_rides['DNC'] = (uber_rides['date'] >= DNC_START) & (uber_rides['date'] <= DNC_END)"
    ]
   },
@@ -459,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_rides['daytype'] = bike_rides['date'].apply(to_ymd).map(daytypes)\n",
+    "bike_rides['daytype'] = bike_rides['date'].map(daytypes)\n",
     "uber_rides['daytype'] = uber_rides['date'].map(daytypes)"
    ]
   },
