--- a/pipeline/9-merge-transits.ipynb
+++ b/pipeline/9-merge-transits.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "train_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"train_rides.csv\")\n",
     "bus_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"bus_rides.csv\")\n",
-    "bike_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides.geoparquet\")\n",
+    "bike_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides_v2.geoparquet\")\n",
     "uber_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"uber_rides.parquet\")\n",
     "\n",
     "point_panel_out = os.path.join(DATA_FOLDER, \"interim\", \"point_panel.parquet\")\n",
