use literal data paths for easier dependency visibility

--- a/pipeline/1-get-cta-stations.ipynb
+++ b/pipeline/1-get-cta-stations.ipynb
@@ -2,29 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import os\n",
     "from shapely.geometry import shape\n",
     "import pandas as pd\n",
     "\n",
-    "from data.constants import (DATA_FOLDER, WORLD_CRS, \n",
+    "from data.constants import (WORLD_CRS, \n",
     "    L_STATIONS_TABLE, BUS_ROUTES_TABLE, BUS_STOPS_TABLE)\n",
     "from data.cta import CTAClient"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file_out = os.path.join(DATA_FOLDER, \"raw\", \"train_stations.geojson\")\n",
-    "bus_routes_file_out = os.path.join(DATA_FOLDER, \"raw\", \"bus_routes.geojson\")\n",
-    "bus_stops_file_out = os.path.join(DATA_FOLDER, \"raw\", \"bus_stops.geojson\")"
+    "train_file_out = \"../data/raw/train_stations.geojson\"\n",
+    "bus_routes_file_out = \"../data/raw/bus_routes.geojson\"\n",
+    "bus_stops_file_out = \"../data/raw/bus_stops.geojson\""
    ]
   },
   {
