--- a/pipeline/1.1-profile-data.ipynb
+++ b/pipeline/1.1-profile-data.ipynb
@@ -2,27 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import os\n",
     "import contextily as cx\n",
     "\n",
     "from data.geo import label_point_dispersion\n",
-    "from data.constants import (DATA_FOLDER, WEB_CRS)"
+    "from data.constants import (WEB_CRS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file_in = os.path.join(DATA_FOLDER, \"raw\", \"train_stations.geojson\")\n",
-    "bus_routes_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_routes.geojson\")\n",
-    "bus_stops_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_stops.geojson\")"
+    "train_file_in = \"../data/raw/train_stations.geojson\"\n",
+    "bus_routes_file_in = \"../data/raw/bus_routes.geojson\"\n",
+    "bus_stops_file_in = \"../data/raw/bus_stops.geojson\""
    ]
   },
   {
