--- a/pipeline/2-get-divvy-stations.ipynb
+++ b/pipeline/2-get-divvy-stations.ipynb
@@ -2,27 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import pandas as pd\n",
-    "import geopandas as gpd\n",
     "import numpy as np\n",
     "\n",
-    "from data.constants import WORLD_CRS, DATA_FOLDER\n",
+    "from data.constants import WORLD_CRS\n",
     "from data.divvy import DivvyClient\n",
     "from data.geo import project_gdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_stations_file = os.path.join(DATA_FOLDER, \"raw\", \"bike_stations.geojson\")"
+    "bike_stations_file = \"../data/raw/bike_stations.geojson\""
    ]
   },
   {
