--- a/pipeline/2.1-profile-data.ipynb
+++ b/pipeline/2.1-profile-data.ipynb
@@ -7,21 +7,20 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import os\n",
     "import contextily as cx\n",
     "from shapely.geometry import LineString\n",
     "\n",
     "from data.geo import label_point_dispersion\n",
-    "from data.constants import (DATA_FOLDER, WEB_CRS)"
+    "from data.constants import (WEB_CRS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_stations_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bike_stations.geojson\")\n",
+    "bike_stations_file_in = \"../data/raw/bike_stations.geojson\"\n",
     "bike_stations = gpd.read_file(bike_stations_file_in)"
    ]
   },
