--- a/pipeline/3-get-tracts.ipynb
+++ b/pipeline/3-get-tracts.ipynb
@@ -2,25 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "\n",
-    "from data.constants import TRACT_TABLE, LOCAL_CRS, WORLD_CRS, COMM_AREA_TABLE, DATA_FOLDER"
+    "from data.constants import TRACT_TABLE, LOCAL_CRS, WORLD_CRS, COMM_AREA_TABLE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tract_file = os.path.join(DATA_FOLDER, \"raw\", \"tracts.geojson\")\n",
-    "comm_file = os.path.join(DATA_FOLDER, \"raw\", \"communities.geojson\")"
+    "tract_file = \"../data/raw/tracts.geojson\"\n",
+    "comm_file = \"../data/raw/communities.geojson\""
    ]
   },
   {
