--- a/pipeline/4-get-poi.ipynb
+++ b/pipeline/4-get-poi.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import os\n",
     "import pandas as pd\n",
     "from shapely.geometry import Point, shape\n",
     "\n",
     "from data.constants import (UNITED_CENTER, MCCORMICK_PLACE, \n",
-    "                            BUILDINGS_TABLE, DATA_FOLDER,\n",
+    "                            BUILDINGS_TABLE,\n",
     "                            WORLD_CRS)\n",
     "from data.cta import CTAClient\n",
     "from data.geo import dms_to_decimal"
@@ -41,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "poi_file_out = os.path.join(DATA_FOLDER, \"raw\", \"poi_buildings.geojson\")"
+    "poi_file_out = \"../data/raw/poi_buildings.geojson\""
    ]
   },
   {
