--- a/pipeline/5-get-ridership.ipynb
+++ b/pipeline/5-get-ridership.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime as dt\n",
     "import geopandas as gpd\n",
-    "import os\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from data.constants import (DATA_FOLDER, L_RIDERSHIP_TABLE, BUS_RIDERSHIP_TABLE)\n",
+    "from data.constants import (L_RIDERSHIP_TABLE, BUS_RIDERSHIP_TABLE)\n",
     "from data.cta import CTAClient\n",
     "from data.divvy import DivvyClient\n",
     "from data.uber import UberClient\n",
@@ -21,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_rides_out = os.path.join(DATA_FOLDER, \"raw\", \"train_rides.csv\")\n",
-    "bus_rides_out = os.path.join(DATA_FOLDER, \"raw\", \"bus_rides.csv\")\n",
-    "bike_rides_out = os.path.join(DATA_FOLDER, \"raw\", \"bike_rides.geoparquet\")\n",
-    "uber_rides_out = os.path.join(DATA_FOLDER, \"raw\", \"uber_rides.parquet\")"
+    "train_rides_out = \"../data/raw/train_rides.csv\"\n",
+    "bus_rides_out = \"../data/raw/bus_rides.csv\"\n",
+    "bike_rides_out = \"../data/raw/bike_rides.geoparquet\"\n",
+    "uber_rides_out = \"../data/raw/uber_rides.parquet\""
    ]
   },
   {
