--- a/pipeline/6-get-divvy-gbfs.ipynb
+++ b/pipeline/6-get-divvy-gbfs.ipynb
@@ -15,28 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import os\n",
     "import pandas as pd\n",
     "import requests\n",
     "import json\n",
     "\n",
-    "from data.constants import (DATA_FOLDER, WORLD_CRS,\n",
+    "from data.constants import (WORLD_CRS,\n",
     "                            DIVVY_STATIONS_GBFS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_stations_in = os.path.join(DATA_FOLDER, \"raw\", \"bike_stations_gbfs.json\")\n",
-    "bike_stations_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_stations_gbfs.geoparquet\")"
+    "bike_stations_in = \"../data/raw/bike_stations_gbfs.json\"\n",
+    "bike_stations_out = \"../data/interim/bike_stations_gbfs.geoparquet\""
    ]
   },
   {
