--- a/pipeline/6.2-reduce-divvy.ipynb
+++ b/pipeline/6.2-reduce-divvy.ipynb
@@ -7,24 +7,20 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "\n",
-    "from data.constants import (DATA_FOLDER)\n",
     "from data.geo import wkb_geom\n",
     "from data.util import coalesce"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides.geoparquet\")\n",
+    "bike_rides_in = \"../data/interim/bike_rides.geoparquet\"\n",
     "\n",
-    "bike_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides_v2.geoparquet\")"
+    "bike_rides_out = \"../data/interim/bike_rides_v2.geoparquet\""
    ]
   },
   {
