--- a/pipeline/7-profile-data.ipynb
+++ b/pipeline/7-profile-data.ipynb
@@ -2,35 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import os\n",
     "import pandas as pd\n",
     "from plotly import express as px\n",
     "\n",
-    "from data.constants import (DATA_FOLDER)\n",
-    "from data.datemath import date_range_daily\n",
-    "from data.geo import wkb_geom"
+    "from data.datemath import date_range_daily"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"train_rides.csv\")\n",
-    "bus_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_rides.csv\")\n",
-    "bike_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides_v2.geoparquet\")\n",
-    "uber_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"uber_rides.parquet\")\n",
+    "train_rides_in = \"../data/raw/train_rides.csv\"\n",
+    "bus_rides_in = \"../data/raw/bus_rides.csv\"\n",
+    "bike_rides_in = \"../data/interim/bike_rides_v2.geoparquet\"\n",
+    "uber_rides_in = \"../data/raw/uber_rides.parquet\"\n",
     "\n",
-    "train_file_in = os.path.join(DATA_FOLDER, \"raw\", \"train_stations.geojson\")\n",
-    "bus_routes_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_routes.geojson\")\n",
-    "bike_stations_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bike_stations.geojson\")\n",
-    "tract_file_in = os.path.join(DATA_FOLDER, \"raw\", \"tracts.geojson\")"
+    "train_file_in = \"../data/raw/train_stations.geojson\"\n",
+    "bus_routes_file_in = \"../data/raw/bus_routes.geojson\"\n",
+    "bike_stations_file_in = \"../data/raw/bike_stations.geojson\"\n",
+    "tract_file_in = \"../data/raw/tracts.geojson\""
    ]
   },
   {
