--- a/pipeline/8-code-features.ipynb
+++ b/pipeline/8-code-features.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import os\n",
     "import pandas as pd\n",
     "from shapely.geometry import Point\n",
     "from shapely import from_wkt\n",
     "\n",
-    "from data.constants import (WORLD_CRS, LOCAL_CRS, DATA_FOLDER,\n",
+    "from data.constants import (WORLD_CRS, LOCAL_CRS,\n",
     "                                OHARE_CENTROID, MIDWAY_CENTROID,\n",
     "                                DNC_START, DNC_END, L_STATIONS_TABLE)\n",
     "from data.geo import meter_to_foot, dms_to_decimal\n",
@@ -21,34 +20,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file_in = os.path.join(DATA_FOLDER, \"raw\", \"train_stations.geojson\")\n",
-    "bus_routes_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_routes.geojson\")\n",
-    "bus_stops_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_stops.geojson\")\n",
-    "bike_stations_file_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_stations_gbfs.geoparquet\")\n",
-    "tract_file_in = os.path.join(DATA_FOLDER, \"raw\", \"tracts.geojson\")\n",
-    "comm_file_in = os.path.join(DATA_FOLDER, \"raw\", \"communities.geojson\")\n",
-    "poi_file_in = os.path.join(DATA_FOLDER, \"raw\", \"poi_buildings.geojson\")\n",
+    "train_file_in = \"../data/raw/train_stations.geojson\"\n",
+    "bus_routes_file_in = \"../data/raw/bus_routes.geojson\"\n",
+    "bus_stops_file_in = \"../data/raw/bus_stops.geojson\"\n",
+    "bike_stations_file_in = \"../data/interim/bike_stations_gbfs.geoparquet\"\n",
+    "tract_file_in = \"../data/raw/tracts.geojson\"\n",
+    "comm_file_in = \"../data/raw/communities.geojson\"\n",
+    "poi_file_in = \"../data/raw/poi_buildings.geojson\"\n",
     "\n",
-    "train_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"train_rides.csv\")\n",
-    "bus_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_rides.csv\")\n",
-    "bike_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides_v2.geoparquet\")\n",
-    "uber_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"uber_rides.parquet\")\n",
+    "train_rides_in = \"../data/raw/train_rides.csv\"\n",
+    "bus_rides_in = \"../data/raw/bus_rides.csv\"\n",
+    "bike_rides_in = \"../data/interim/bike_rides_v2.geoparquet\"\n",
+    "uber_rides_in = \"../data/raw/uber_rides.parquet\"\n",
     "\n",
-    "train_file_out = os.path.join(DATA_FOLDER, \"interim\", \"train_stations.geojson\")\n",
-    "bus_routes_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bus_routes.geojson\")\n",
-    "bus_stops_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bus_stops.geojson\")\n",
-    "bike_stations_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_stations_gbfs_v2.geojson\")\n",
-    "tract_file_out = os.path.join(DATA_FOLDER, \"interim\", \"tracts.geoparquet\")\n",
-    "comm_file_out = os.path.join(DATA_FOLDER, \"interim\", \"communities.geojson\")\n",
+    "train_file_out = \"../data/interim/train_stations.geojson\"\n",
+    "bus_routes_file_out = \"../data/interim/bus_routes.geojson\"\n",
+    "bus_stops_file_out = \"../data/interim/bus_stops.geojson\"\n",
+    "bike_stations_file_out = \"../data/interim/bike_stations_gbfs_v2.geojson\"\n",
+    "tract_file_out = \"../data/interim/tracts.geoparquet\"\n",
+    "comm_file_out = \"../data/interim/communities.geojson\"\n",
     "\n",
-    "train_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"train_rides.csv\")\n",
-    "bus_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"bus_rides.csv\")\n",
-    "bike_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides_v3.geoparquet\")\n",
-    "uber_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"uber_rides.parquet\")"
+    "train_rides_out = \"../data/interim/train_rides.csv\"\n",
+    "bus_rides_out = \"../data/interim/bus_rides.csv\"\n",
+    "bike_rides_out = \"../data/interim/bike_rides_v3.geoparquet\"\n",
+    "uber_rides_out = \"../data/interim/uber_rides.parquet\""
    ]
   },
   {
