--- a/pipeline/9-merge-transits.ipynb
+++ b/pipeline/9-merge-transits.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
-    "import os\n",
     "from shapely.geometry import MultiPoint\n",
     "\n",
-    "from data.constants import DATA_FOLDER, WORLD_CRS, LOCAL_CRS, CHI_BOUNDARY_FILE\n",
-    "from data.datemath import to_ymd"
+    "from data.constants import WORLD_CRS, LOCAL_CRS"
    ]
   },
   {
@@ -21,21 +19,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file_in = os.path.join(DATA_FOLDER, \"interim\", \"train_stations.geojson\")\n",
-    "bus_routes_file_in = os.path.join(DATA_FOLDER, \"interim\", \"bus_routes.geojson\")\n",
-    "bus_stops_file_in = os.path.join(DATA_FOLDER, \"interim\", \"bus_stops.geojson\")\n",
-    "bike_stations_file_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_stations.geojson\")\n",
-    "tract_file_in = os.path.join(DATA_FOLDER, \"interim\", \"tracts.geoparquet\")\n",
-    "comm_file_in = os.path.join(DATA_FOLDER, \"interim\", \"communities.geojson\")\n",
+    "train_file_in = \"../data/interim/train_stations.geojson\"\n",
+    "bus_routes_file_in = \"../data/interim/bus_routes.geojson\"\n",
+    "bus_stops_file_in = \"../data/interim/bus_stops.geojson\"\n",
+    "bike_stations_file_in = \"../data/interim/bike_stations_gbfs_v2.geojson\"\n",
+    "tract_file_in = \"../data/interim/tracts.geoparquet\"\n",
+    "comm_file_in = \"../data/interim/communities.geojson\"\n",
     "\n",
-    "train_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"train_rides.csv\")\n",
-    "bus_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"bus_rides.csv\")\n",
-    "bike_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides_v2.geoparquet\")\n",
-    "uber_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"uber_rides.parquet\")\n",
+    "train_rides_in = \"../data/interim/train_rides.csv\"\n",
+    "bus_rides_in = \"../data/interim/bus_rides.csv\"\n",
+    "bike_rides_in = \"../data/interim/bike_rides_v3.geoparquet\"\n",
+    "uber_rides_in = \"../data/interim/uber_rides.parquet\"\n",
     "\n",
-    "point_panel_out = os.path.join(DATA_FOLDER, \"interim\", \"point_panel.parquet\")\n",
-    "line_panel_out = os.path.join(DATA_FOLDER, \"interim\", \"line_panel.parquet\")\n",
-    "tract_panel_out = os.path.join(DATA_FOLDER, \"interim\", \"tract_panel.parquet\")"
+    "point_panel_out = \"../data/interim/point_panel.parquet\"\n",
+    "line_panel_out = \"../data/interim/line_panel.parquet\"\n",
+    "tract_panel_out = \"../data/interim/tract_panel.parquet\""
    ]
   },
   {
@@ -183,74 +181,17 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# In the current dataset, all id's are integer, so we will truncate decimal part before stringifying\n",
-    "assert all(bike_stations['station_id'].astype(int) == bike_stations['station_id'])\n",
-    "bike_stations['station_id'] = bike_stations['station_id'].astype(int).astype(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No common stations? True\n"
-     ]
-    }
-   ],
-   "source": [
-    "tmp = bike_stations.merge(bike_rides, on=['station_id','vintage'], how='inner')\n",
-    "print(f\"No common stations? {tmp.empty}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No common points? False. 359714 / 1086142 points in common.\n"
-     ]
-    }
-   ],
-   "source": [
-    "tmp = bike_stations.merge(bike_rides, on=['geometry'], how='inner')\n",
-    "print(f\"No common points? {tmp.empty}. {len(tmp)} / {len(bike_rides)} points in common.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Columns to gain by merging:  {'name'}\n"
+      "Columns to gain by merging:  {'station_id'}\n"
      ]
     }
    ],
    "source": [
     "print(\"Columns to gain by merging: \", set(bike_stations.columns) - set(bike_rides.columns))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert to string for dtype parity with other transits\n",
-    "bike_rides['date'] = bike_rides['date'].apply(to_ymd)"
    ]
   },
   {
@@ -285,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +446,7 @@
        "max     0.038462  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,19 +609,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "point_panel = combine_panels(train=train_rides.assign(id = train_rides['station_id'].astype(str)),\n",
-    "                            bike=bike_rides.rename(columns={\"station_id\":\"id\"}),\n",
+    "                            bike=bike_rides.rename(columns={\"station_name\":\"id\"}),\n",
     "                            uber=uber_rides.rename(columns={'centroid':'geometry'}) \\\n",
     "                                .assign(id = uber_rides['tract'].astype(str)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
