--- a/pipeline/10-establish-panel.ipynb
+++ b/pipeline/10-establish-panel.ipynb
@@ -14,36 +14,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
     "import numpy as np\n",
     "import geopandas as gpd\n",
     "from datetime import timedelta\n",
     "\n",
-    "from data.constants import DATA_FOLDER, DNC_START, DNC_END\n",
+    "from data.constants import DNC_START, DNC_END\n",
     "from data.datemath import from_ymd, date_aggs, to_yw\n",
     "from power import power_reg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "point_panel_in = os.path.join(DATA_FOLDER, \"interim\", \"point_panel.parquet\")\n",
-    "line_panel_in = os.path.join(DATA_FOLDER, \"interim\", \"line_panel.parquet\")\n",
-    "tract_panel_in = os.path.join(DATA_FOLDER, \"interim\", \"tract_panel.parquet\")\n",
-    "chi_tracts_in = os.path.join(DATA_FOLDER, \"interim\", \"tracts.geoparquet\")\n",
+    "point_panel_in = \"../data/interim/point_panel.parquet\"\n",
+    "line_panel_in = \"../data/interim/line_panel.parquet\"\n",
+    "tract_panel_in = \"../data/interim/tract_panel.parquet\"\n",
+    "chi_tracts_in = \"../data/interim/tracts.geoparquet\"\n",
     "\n",
-    "point_panel_out = os.path.join(DATA_FOLDER, \"final\", \"point_panel.parquet\")\n",
-    "line_panel_out = os.path.join(DATA_FOLDER, \"final\", \"line_panel.parquet\")\n",
-    "tract_panel_out = os.path.join(DATA_FOLDER, \"final\", \"tract_panel.parquet\")"
+    "point_panel_out = \"../data/final/point_panel.parquet\"\n",
+    "line_panel_out = \"../data/final/line_panel.parquet\"\n",
+    "tract_panel_out = \"../data/final/tract_panel.parquet\""
    ]
   },
   {
