--- a/pipeline/3.1-profile-data.ipynb
+++ b/pipeline/3.1-profile-data.ipynb
@@ -2,23 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopandas as gpd\n",
-    "import os\n",
-    "\n",
-    "from data.constants import (DATA_FOLDER)"
+    "import geopandas as gpd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tract_file = os.path.join(DATA_FOLDER, \"raw\", \"tracts.geojson\")"
+    "tract_file = \"../data/raw/tracts.geojson\""
    ]
   },
   {
