--- a/pipeline/6.1-impute-divvy.ipynb
+++ b/pipeline/6.1-impute-divvy.ipynb
@@ -16,32 +16,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import os\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "import contextily as cx\n",
     "from shapely import to_wkb\n",
     "\n",
     "\n",
-    "from data.constants import (DATA_FOLDER, LOCAL_CRS, WORLD_CRS, WEB_CRS)\n",
+    "from data.constants import (LOCAL_CRS, WORLD_CRS, WEB_CRS)\n",
     "from data.geo import foot_to_mi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"bike_rides.geoparquet\")\n",
-    "bike_stations_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_stations_gbfs.geoparquet\")\n",
+    "bike_rides_in = \"../data/raw/bike_rides.geoparquet\"\n",
+    "bike_stations_in = \"../data/interim/bike_stations_gbfs.geoparquet\"\n",
     "\n",
-    "bike_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides.geoparquet\")"
+    "bike_rides_out = \"../data/interim/bike_rides.geoparquet\""
    ]
   },
   {
